// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`capture with inputs --har updating an OpenAPI spec 1`] = `
"GET /books
  [32m✓ [39m200 response
  [32m[200 response body] 'data' has been added (/properties/data)[39m
  [32m[200 response body] 'next' has been added (/properties/next)[39m
  [32m[200 response body] 'has_more_data' has been added (/properties/has_more_data)[39m

[1m[90mLearning path patterns for unmatched requests...[39m[22m
[1m[90mDocumenting new operations:[39m[22m
GET /authors/{author}
POST /authors
GET /books/{book}
POST /books
GET /some/example
"
`;

exports[`capture with inputs --har updating an OpenAPI spec 2`] = `
"openapi: 3.0.3
info:
  title: a spec
  description: The API
  version: 0.1.0
paths:
  /books:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooks200ResponseBody"
    post:
      responses:
        "201":
          description: 201 response
          content:
            application/json; charset=utf-8:
              schema:
                $ref: "#/components/schemas/PostBooks201ResponseBody"
      requestBody:
        content:
          application/json:
            schema:
              $ref: "#/components/schemas/PostBooksRequestBody"
  "/authors/{author}":
    parameters:
      - in: path
        name: author
        required: true
        schema:
          type: string
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json; charset=utf-8:
              schema:
                $ref: "#/components/schemas/GetAuthorsAuthor200ResponseBody"
  /authors:
    post:
      responses:
        "201":
          description: 201 response
          content:
            application/json; charset=utf-8:
              schema:
                $ref: "#/components/schemas/PostAuthors201ResponseBody"
      requestBody:
        content:
          application/json:
            schema:
              $ref: "#/components/schemas/PostAuthorsRequestBody"
  "/books/{book}":
    parameters:
      - in: path
        name: book
        required: true
        schema:
          type: string
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json; charset=utf-8:
              schema:
                $ref: "#/components/schemas/GetAuthorsAuthor200ResponseBody"
  /some/example:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetSomeExample200ResponseBody"
components:
  schemas:
    GetBooks200ResponseBody:
      type: object
      properties:
        books:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
        data:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
              name:
                type: string
              author_id:
                type: string
              created_at:
                type: string
              updated_at:
                type: string
            required:
              - id
              - name
              - author_id
              - created_at
              - updated_at
        next:
          nullable: true
        has_more_data:
          type: boolean
      required:
        - data
        - next
        - has_more_data
    GetAuthorsAuthor200ResponseBody:
      type: object
      properties:
        id:
          type: string
        name:
          type: string
        created_at:
          type: string
        updated_at:
          type: string
      required:
        - id
        - name
        - created_at
        - updated_at
    PostAuthorsRequestBody:
      type: object
      properties:
        name:
          type: string
      required:
        - name
    PostAuthors201ResponseBody:
      type: object
      properties:
        id:
          type: string
        name:
          type: string
      required:
        - id
        - name
    PostBooksRequestBody:
      type: object
      properties:
        name:
          type: string
        author_id:
          type: string
      required:
        - name
        - author_id
    PostBooks201ResponseBody:
      type: object
      properties:
        id:
          type: string
        name:
          type: string
        author_id:
          type: string
      required:
        - id
        - name
        - author_id
    GetSomeExample200ResponseBody:
      type: object
      properties:
        something:
          type: array
          items:
            type: object
            properties:
              name:
                type: string
              another:
                type: array
                items:
                  type: object
                  properties:
                    path:
                      type: string
                    max:
                      type: number
                    min:
                      type: number
                  required:
                    - path
                    - max
                    - min
                nullable: true
            required:
              - name
              - another
      required:
        - something
"
`;

exports[`capture with inputs --har verifying OpenAPI spec 1`] = `
"GET /books
  [31m× [39m200 response
  [31m[200 response body] 'data' is not documented (/properties)[39m
  [31m[200 response body] 'next' is not documented (/properties)[39m
  [31m[200 response body] 'has_more_data' is not documented (/properties)[39m

100.0% coverage of your documented operations. 7 requests did not match a documented path (8 total requests).
3 diffs detected in documented operations

[33mNew endpoints are only added in interactive mode.[39m
[34mRun with \`--update interactive\` to add new endpoints[39m
[33mHint: optic capture openapi.yml --update interactive[39m
"
`;

exports[`capture with inputs --postman updating an OpenAPI spec 1`] = `
"[90m1 endpoint did not receive traffic[39m

[1m[90mLearning path patterns for unmatched requests...[39m[22m
[1m[90mDocumenting new operations:[39m[22m
GET /auth/hawk
GET /basic-auth
GET /cookies/{cooky}
GET /cookies
GET /deflate
GET /delay/{delay}
DELETE /delete
GET /digest-auth
GET /encoding/utf8
GET /
GET /get/hello
GET /get
GET /gzip
GET /headers
GET /ip
GET /oauth1
PATCH /patch
POST /post
Error: Invalid reference token: text/plain
    at Object.get ($root$/projects/json-pointer-helpers/src/json-pointers/json-pointer-helpers.ts:16:13)
    at SchemaInventory.refsForAdditions ($root$/projects/optic/src/commands/capture/patches/patchers/closeness/schema-inventory.ts:64:46)
    at async generateRefRefactorPatches ($root$/projects/optic/src/commands/capture/patches/patches.ts:146:18)
    at async $root$/projects/optic/src/commands/capture/actions/undocumented.ts:181:5
    at async jsonOpsFromSpecPatches ($root$/projects/optic/src/commands/capture/patches/patches.ts:154:20)
    at async documentNewEndpoint ($root$/projects/optic/src/commands/capture/actions/undocumented.ts:194:22)
    at async $root$/projects/optic/src/commands/capture/capture.ts:371:11
    at async Command.<anonymous> ($root$/projects/optic/src/error-handler.ts:18:14)
[31mInvalid reference token: text/plain[39m
"
`;

exports[`capture with inputs --postman updating an OpenAPI spec 2`] = `
"openapi: 3.0.3
info:
  title: a spec
  description: The API
  version: 0.1.0
paths:
  /books:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooks200ResponseBody"
  /auth/hawk:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetAuthHawk200ResponseBody"
  /basic-auth:
    get:
      responses: {}
  "/cookies/{cooky}":
    parameters:
      - in: path
        name: cooky
        required: true
        schema:
          type: string
    get:
      responses: {}
  /cookies:
    get:
      responses: {}
  /deflate:
    get:
      responses: {}
  "/delay/{delay}":
    parameters:
      - in: path
        name: delay
        required: true
        schema:
          type: string
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetDelayDelay200ResponseBody"
  /delete:
    delete:
      responses: {}
      requestBody:
        content:
          text/plain:
            schema: {}
  /digest-auth:
    get:
      responses: {}
  /encoding/utf8:
    get:
      responses: {}
  /:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/Get200ResponseBody"
  /get/hello:
    get:
      responses: {}
  /get:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetGet200ResponseBody"
  /gzip:
    get:
      responses: {}
  /headers:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetHeaders200ResponseBody"
  /ip:
    get:
      responses: {}
  /oauth1:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetAuthHawk200ResponseBody"
        "401":
          description: 401 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetOauth1401ResponseBody"
  /patch:
    patch:
      responses: {}
      requestBody:
        content:
          text/plain:
            schema: {}
  /post:
    post:
      responses: {}
      requestBody:
        content:
          application/x-www-form-urlencoded:
            schema: {}
  /put:
    put:
      responses: {}
      requestBody:
        content:
          application/json:
            schema:
              $ref: "#/components/schemas/PutPutRequestBody"
  /response-headers:
    get:
      responses:
        "200":
          description: 200 response
          content:
            text/html: {}
  "/status/{status}":
    parameters:
      - in: path
        name: status
        required: true
        schema:
          type: string
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetStatusStatus200ResponseBody"
  "/stream/{stream}":
    parameters:
      - in: path
        name: stream
        required: true
        schema:
          type: string
    get:
      responses: {}
  "/time/{time}":
    parameters:
      - in: path
        name: time
        required: true
        schema:
          type: string
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetTimeTime200ResponseBody"
  /transform/collection:
    post:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/PostTransformCollection200ResponseBody"
      requestBody:
        content:
          application/json:
            schema:
              $ref: "#/components/schemas/PostTransformCollectionRequestBody"
components:
  schemas:
    GetBooks200ResponseBody:
      type: object
      properties:
        books:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
    GetAuthHawk200ResponseBody:
      type: object
      properties:
        status:
          type: string
        message:
          type: string
      required:
        - status
        - message
    GetDelayDelay200ResponseBody:
      type: object
      properties:
        delay:
          type: string
      required:
        - delay
    Get200ResponseBody:
      type: object
      properties:
        cookies:
          type: object
          properties:
            foo2:
              type: string
          required:
            - foo2
      required:
        - cookies
    GetGet200ResponseBody:
      type: object
      properties:
        args:
          type: object
          properties:
            foo1:
              type: string
            foo2:
              type: string
          required:
            - foo1
            - foo2
        headers:
          type: object
          properties:
            x-forwarded-proto:
              type: string
            host:
              type: string
            accept:
              type: string
            accept-encoding:
              type: string
            cache-control:
              type: string
            postman-token:
              type: string
            user-agent:
              type: string
            x-forwarded-port:
              type: string
          required:
            - x-forwarded-proto
            - host
            - accept
            - accept-encoding
            - cache-control
            - postman-token
            - user-agent
            - x-forwarded-port
        url:
          type: string
      required:
        - args
        - headers
        - url
    GetHeaders200ResponseBody:
      type: object
      properties:
        headers:
          type: object
          properties:
            host:
              type: string
            accept:
              type: string
            accept-encoding:
              type: string
            accept-language:
              type: string
            cache-control:
              type: string
            my-sample-header:
              type: string
            postman-token:
              type: string
            user-agent:
              type: string
            x-forwarded-port:
              type: string
            x-forwarded-proto:
              type: string
          required:
            - host
            - accept
            - accept-encoding
            - accept-language
            - cache-control
            - my-sample-header
            - postman-token
            - user-agent
            - x-forwarded-port
            - x-forwarded-proto
      required:
        - headers
    GetOauth1401ResponseBody:
      type: object
      properties:
        status:
          type: string
        message:
          type: string
        base_uri:
          type: string
        normalized_param_string:
          type: string
        base_string:
          type: string
        signing_key:
          type: string
      required:
        - status
        - message
        - base_uri
        - normalized_param_string
        - base_string
        - signing_key
    PutPutRequestBody:
      type: array
      items:
        type: object
        properties:
          hello:
            type: string
          my:
            type: number
          name:
            type: boolean
          is:
            type: object
            properties:
              legally:
                type: string
              num:
                type: number
              mixed:
                type: array
                items:
                  oneOf:
                    - type: object
                      properties:
                        name:
                          type: string
                      required:
                        - name
                    - type: boolean
                    - type: string
                    - type: number
            required:
              - legally
              - num
              - mixed
          authenticated:
            type: boolean
        required: []
    GetStatusStatus200ResponseBody:
      type: object
      properties:
        status:
          type: number
      required:
        - status
    GetTimeTime200ResponseBody:
      type: object
      properties:
        valid:
          type: boolean
      required:
        - valid
    PostTransformCollectionRequestBody:
      type: object
      properties:
        info:
          type: object
          properties:
            name:
              type: string
            schema:
              type: string
            description:
              type: string
          required:
            - name
            - schema
            - description
        item:
          type: array
          items:
            type: object
            properties:
              name:
                type: string
              event:
                type: array
                items:
                  type: object
                  properties:
                    listen:
                      type: string
                    script:
                      type: object
                      properties:
                        type:
                          type: string
                        exec:
                          type: array
                          items:
                            type: string
                      required:
                        - type
                        - exec
                  required:
                    - listen
                    - script
              request:
                type: object
                properties:
                  url:
                    type: string
                  method:
                    type: string
                  header:
                    type: array
                    items:
                      type: object
                      properties:
                        key:
                          type: string
                        value:
                          type: string
                      required:
                        - key
                        - value
                  body:
                    type: object
                    properties:
                      mode:
                        type: string
                      raw:
                        type: string
                    required:
                      - mode
                      - raw
                required:
                  - url
                  - method
            required:
              - name
              - request
      required:
        - info
        - item
    PostTransformCollection200ResponseBody:
      type: object
      properties:
        id:
          type: string
        name:
          type: string
        description:
          type: string
        order:
          type: array
          items:
            type: string
        folders:
          type: array
          items: {}
        requests:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
              name:
                type: string
              collectionId:
                type: string
              method:
                type: string
              headers:
                type: string
              data:
                type: array
                items: {}
              rawModeData:
                type: string
              tests:
                type: string
              preRequestScript:
                type: string
              url:
                type: string
              dataMode:
                type: string
            required:
              - id
              - name
              - collectionId
              - method
              - headers
              - data
              - rawModeData
              - url
      required:
        - id
        - name
        - description
        - order
        - folders
        - requests
"
`;

exports[`capture with inputs --postman verifying OpenAPI spec 1`] = `
"[90m1 endpoint did not receive traffic[39m

0.0% coverage of your documented operations. 58 requests did not match a documented path (58 total requests).

[33mNew endpoints are only added in interactive mode.[39m
[34mRun with \`--update interactive\` to add new endpoints[39m
[33mHint: optic capture openapi.yml --update interactive[39m
"
`;

exports[`capture with requests update behavior handle server path prefixes in spec 1`] = `
"Generating traffic to send to server
[90m1 endpoint did not receive traffic[39m

[1m[90mLearning path patterns for unmatched requests...[39m[22m
[1m[90mDocumenting new operations:[39m[22m
GET /authors
GET /books/{book}
POST /books/{book}
GET /books
"
`;

exports[`capture with requests update behavior handle server path prefixes in spec 2`] = `
"openapi: 3.0.3
info:
  title: a spec
  description: The API
  version: 0.1.0
servers:
  - name: server
    url: http://localhost:PORT/api
paths:
  /books:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooks200ResponseBody"
  /authors:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetAuthors200ResponseBody"
  "/books/{book}":
    parameters:
      - in: path
        name: book
        required: true
        schema:
          type: string
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooksBook200ResponseBody"
    post:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooksBook200ResponseBody"
      requestBody:
        content:
          application/json;charset=UTF-8:
            schema:
              $ref: "#/components/schemas/PostBooksBookRequestBody"
components:
  schemas:
    GetBooks200ResponseBody:
      type: object
      properties:
        books:
          type: array
          items:
            $ref: "#/components/schemas/GetBooksBook200ResponseBody"
    GetAuthors200ResponseBody:
      type: object
      properties:
        authors:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
              name:
                type: string
              created_at:
                type: string
              updated_at:
                type: string
            required:
              - id
              - name
              - created_at
              - updated_at
      required:
        - authors
    GetBooksBook200ResponseBody:
      type: object
      properties:
        id:
          type: string
        name:
          type: string
        author_id:
          type: string
        status:
          type: string
        price:
          type: number
        created_at:
          type: string
        updated_at:
          type: string
      required:
        - id
        - name
        - author_id
        - status
        - price
        - created_at
        - updated_at
    PostBooksBookRequestBody:
      type: object
      properties:
        name:
          type: string
        price:
          type: number
        author_id:
          type: string
      required:
        - name
        - price
        - author_id
"
`;

exports[`capture with requests update behavior handle servers not at root of host 1`] = `
"Generating traffic to send to server
GET /books
  [32m✓ [39m200 response
  [32m[200 response body] 'name' has been added (/properties/books/items/properties/name)[39m
  [32m[200 response body] 'author_id' has been added (/properties/books/items/properties/author_id)[39m
  [32m[200 response body] 'status' has been added (/properties/books/items/properties/status)[39m
  [32m[200 response body] 'price' has been added (/properties/books/items/properties/price)[39m
  [32m[200 response body] 'created_at' has been added (/properties/books/items/properties/created_at)[39m
  [32m[200 response body] 'updated_at' has been added (/properties/books/items/properties/updated_at)[39m

[1m[90mLearning path patterns for unmatched requests...[39m[22m
[1m[90mDocumenting new operations:[39m[22m
GET /authors
GET /books/{book}
POST /books/{book}
"
`;

exports[`capture with requests update behavior handle servers not at root of host 2`] = `
"openapi: 3.0.3
info:
  title: a spec
  description: The API
  version: 0.1.0
paths:
  /books:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooks200ResponseBody"
  /authors:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetAuthors200ResponseBody"
  "/books/{book}":
    parameters:
      - in: path
        name: book
        required: true
        schema:
          type: string
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooksBook200ResponseBody"
    post:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooksBook200ResponseBody"
      requestBody:
        content:
          application/json;charset=UTF-8:
            schema:
              $ref: "#/components/schemas/PostBooksBookRequestBody"
components:
  schemas:
    GetBooks200ResponseBody:
      type: object
      properties:
        books:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
              name:
                type: string
              author_id:
                type: string
              status:
                type: string
              price:
                type: number
              created_at:
                type: string
              updated_at:
                type: string
            required:
              - name
              - author_id
              - status
              - price
              - created_at
              - updated_at
    GetAuthors200ResponseBody:
      type: object
      properties:
        authors:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
              name:
                type: string
              created_at:
                type: string
              updated_at:
                type: string
            required:
              - id
              - name
              - created_at
              - updated_at
      required:
        - authors
    GetBooksBook200ResponseBody:
      type: object
      properties:
        id:
          type: string
        name:
          type: string
        author_id:
          type: string
        status:
          type: string
        price:
          type: number
        created_at:
          type: string
        updated_at:
          type: string
      required:
        - id
        - name
        - author_id
        - status
        - price
        - created_at
        - updated_at
    PostBooksBookRequestBody:
      type: object
      properties:
        name:
          type: string
        price:
          type: number
        author_id:
          type: string
      required:
        - name
        - price
        - author_id
"
`;

exports[`capture with requests update behavior handles update in other file 1`] = `
"Generating traffic to send to server
GET /books
  [32m✓ [39m200 response
  [32m[200 response body] 'name' has been added (/properties/books/items/properties/name)[39m
  [32m[200 response body] 'author_id' has been added (/properties/books/items/properties/author_id)[39m
  [32m[200 response body] 'status' has been added (/properties/books/items/properties/status)[39m
  [32m[200 response body] 'price' has been added (/properties/books/items/properties/price)[39m
  [32m[200 response body] 'created_at' has been added (/properties/books/items/properties/created_at)[39m
  [32m[200 response body] 'updated_at' has been added (/properties/books/items/properties/updated_at)[39m
"
`;

exports[`capture with requests update behavior handles update in other file 2`] = `
"openapi: 3.0.3
info:
  title: a spec
  description: The API
  version: 0.1.0
paths:
  /books:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: ./components/books.yml#/GetBooks200ResponseBody
"
`;

exports[`capture with requests update behavior handles update in other file 3`] = `
"GetBooks200ResponseBody:
  type: object
  properties:
    books:
      type: array
      items:
        type: object
        properties:
          id:
            type: string
          name:
            type: string
          author_id:
            type: string
          status:
            type: string
          price:
            type: number
          created_at:
            type: string
          updated_at:
            type: string
        required:
          - name
          - author_id
          - status
          - price
          - created_at
          - updated_at
"
`;

exports[`capture with requests update behavior respects x-optic-path-ignore 1`] = `
"Generating traffic to send to server
GET /authors
  [32m✓ [39m200 response
GET /books
  [32m✓ [39m200 response
  [32m[200 response body] 'name' has been added (/properties/books/items/properties/name)[39m
  [32m[200 response body] 'author_id' has been added (/properties/books/items/properties/author_id)[39m
  [32m[200 response body] 'status' has been added (/properties/books/items/properties/status)[39m
  [32m[200 response body] 'price' has been added (/properties/books/items/properties/price)[39m
  [32m[200 response body] 'created_at' has been added (/properties/books/items/properties/created_at)[39m
  [32m[200 response body] 'updated_at' has been added (/properties/books/items/properties/updated_at)[39m

[1m[90mLearning path patterns for unmatched requests...[39m[22m
[1m[90mDocumenting new operations:[39m[22m
POST /books/{book}
"
`;

exports[`capture with requests update behavior respects x-optic-path-ignore 2`] = `
"openapi: 3.0.3
info:
  title: a spec
  description: The API
  version: 0.1.0
x-optic-path-ignore:
  - method: get
    path: /books/**
  - /authors
paths:
  /books:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooks200ResponseBody"
  /authors:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                type: object
  "/books/{book}":
    parameters:
      - in: path
        name: book
        required: true
        schema:
          type: string
    post:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/PostBooksBook200ResponseBody"
      requestBody:
        content:
          application/json;charset=UTF-8:
            schema:
              $ref: "#/components/schemas/PostBooksBookRequestBody"
components:
  schemas:
    GetBooks200ResponseBody:
      type: object
      properties:
        books:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
              name:
                type: string
              author_id:
                type: string
              status:
                type: string
              price:
                type: number
              created_at:
                type: string
              updated_at:
                type: string
            required:
              - name
              - author_id
              - status
              - price
              - created_at
              - updated_at
    PostBooksBookRequestBody:
      type: object
      properties:
        name:
          type: string
        price:
          type: number
        author_id:
          type: string
      required:
        - name
        - price
        - author_id
    PostBooksBook200ResponseBody:
      type: object
      properties:
        id:
          type: string
        name:
          type: string
        author_id:
          type: string
        status:
          type: string
        price:
          type: number
        created_at:
          type: string
        updated_at:
          type: string
      required:
        - id
        - name
        - author_id
        - status
        - price
        - created_at
        - updated_at
"
`;

exports[`capture with requests update behavior updates all endpoints with --update automatic 1`] = `
"Generating traffic to send to server
GET /books
  [32m✓ [39m200 response
  [32m[200 response body] 'name' has been added (/properties/books/items/properties/name)[39m
  [32m[200 response body] 'created_at' has been added (/properties/books/items/properties/created_at)[39m
  [32m[200 response body] 'updated_at' has been added (/properties/books/items/properties/updated_at)[39m
  [33m[200 response body] 'author_id' is now type number (/properties/books/items/properties/author_id)[39m
  [33m[200 response body] 'price' is now type string (/properties/books/items/properties/price)[39m
  [33m[200 response body] 'status' now has enum value 'hold' (/properties/books/items/properties/status/enum)[39m

[1m[90mLearning path patterns for unmatched requests...[39m[22m
[1m[90mDocumenting new operations:[39m[22m
GET /authors
GET /books/{book}
POST /books/{book}
GET /
"
`;

exports[`capture with requests update behavior updates all endpoints with --update automatic 2`] = `
"openapi: 3.0.3
info:
  title: a spec
  description: The API
  version: 0.1.0
paths:
  /books:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooks200ResponseBody"
  /authors:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetAuthors200ResponseBody"
  "/books/{book}":
    parameters:
      - in: path
        name: book
        required: true
        schema:
          type: string
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooksBook200ResponseBody"
    post:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooksBook200ResponseBody"
      requestBody:
        content:
          application/json;charset=UTF-8:
            schema:
              $ref: "#/components/schemas/PostBooksBookRequestBody"
  /:
    get:
      responses:
        "200":
          description: 200 response
          content:
            text/html:
              schema:
                $ref: "#/components/schemas/Get200ResponseBody"
components:
  schemas:
    GetBooks200ResponseBody:
      type: object
      properties:
        books:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
              author_id:
                oneOf:
                  - type: number
                  - type: string
              status:
                type: string
                enum:
                  - ready
                  - not_ready
                  - hold
              price:
                oneOf:
                  - type: string
                  - type: number
              name:
                type: string
              created_at:
                type: string
              updated_at:
                type: string
            required:
              - id
              - author_id
              - name
              - created_at
              - updated_at
    GetAuthors200ResponseBody:
      type: object
      properties:
        authors:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
              name:
                type: string
              created_at:
                type: string
              updated_at:
                type: string
            required:
              - id
              - name
              - created_at
              - updated_at
      required:
        - authors
    GetBooksBook200ResponseBody:
      type: object
      properties:
        id:
          type: string
        name:
          type: string
        author_id:
          type: string
        status:
          type: string
        price:
          type: number
        created_at:
          type: string
        updated_at:
          type: string
      required:
        - id
        - name
        - author_id
        - status
        - price
        - created_at
        - updated_at
    PostBooksBookRequestBody:
      type: object
      properties:
        name:
          type: string
        price:
          type: number
        author_id:
          type: string
      required:
        - name
        - price
        - author_id
    Get200ResponseBody:
      type: string
"
`;

exports[`capture with requests update behavior updates only existing endpoints by default 1`] = `
"Generating traffic to send to server
GET /books
  [32m✓ [39m200 response
  [32m[200 response body] 'name' has been added (/properties/books/items/properties/name)[39m
  [32m[200 response body] 'created_at' has been added (/properties/books/items/properties/created_at)[39m
  [32m[200 response body] 'updated_at' has been added (/properties/books/items/properties/updated_at)[39m
  [33m[200 response body] 'author_id' is now type number (/properties/books/items/properties/author_id)[39m
  [33m[200 response body] 'price' is now type string (/properties/books/items/properties/price)[39m
  [33m[200 response body] 'status' now has enum value 'hold' (/properties/books/items/properties/status/enum)[39m

5 unmatched requests
[33mNew endpoints are only added in interactive mode.[39m
[34mRun with \`--update interactive\` to add new endpoints[39m
[33mHint: optic capture openapi.yml --update interactive[39m
"
`;

exports[`capture with requests update behavior updates only existing endpoints by default 2`] = `
"openapi: 3.0.3
info:
  title: a spec
  description: The API
  version: 0.1.0
paths:
  /books:
    get:
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/GetBooks200ResponseBody"
components:
  schemas:
    GetBooks200ResponseBody:
      type: object
      properties:
        books:
          type: array
          items:
            type: object
            properties:
              id:
                type: string
              author_id:
                oneOf:
                  - type: number
                  - type: string
              status:
                type: string
                enum:
                  - ready
                  - not_ready
                  - hold
              price:
                oneOf:
                  - type: string
                  - type: number
              name:
                type: string
              created_at:
                type: string
              updated_at:
                type: string
            required:
              - id
              - author_id
              - name
              - created_at
              - updated_at
"
`;

exports[`capture with requests verify behavior verifies spec with endpoint specificity 1`] = `
"Generating traffic to send to server
GET /books/status
  [32m✓ [39m200 response
GET /books/{bookId}
  [31m× [39m200 response
  [31m[200 response body] 'status' is not documented (/properties)[39m
  [31m[200 response body] 'price' is not documented (/properties)[39m
GET /books
  [31m× [39m200 response
  [31m[200 response body] 'name' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'author_id' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'status' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'price' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'created_at' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'updated_at' is not documented (/properties/books/items/properties)[39m

100.0% coverage of your documented operations. 2 requests did not match a documented path (6 total requests).
8 diffs detected in documented operations

[33mNew endpoints are only added in interactive mode.[39m
[34mRun with \`--update interactive\` to add new endpoints[39m
[33mHint: optic capture openapi-with-overlapping-paths.yml --update interactive[39m
"
`;

exports[`capture with requests verify behavior verifies the specification in verbose mode 1`] = `
"Generating traffic to send to server
GET /books
  [31m× [39m200 response
  [31m[200 response body] 'name' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'created_at' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'updated_at' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'author_id' does not match type number. Received 6nTxAFM5ck4Hob77hGQoL (/properties/books/items/properties/author_id)[39m
  [41m  Diff  [49m 'author_id' did not match schema
operation: [1mget /books[22m  
[90m25 |[39m properties:
[90m26 |[39m   id:
[90m27 |[39m     type: string
[90m28 |[39m [1m[33m  author_id:  [41m[Actual] "6nTxAFM5ck4Hob77hGQoL"[49m[39m[22m
[90m29 |[39m     type: number
[90m30 |[39m   status:
[90m31 |[39m     type: string
[90m$workspace$/openapi.yml[39m

  [31m[200 response body] 'price' does not match type string. Received 10 (/properties/books/items/properties/price)[39m
  [41m  Diff  [49m 'price' did not match schema
operation: [1mget /books[22m  
[90m32 |[39m     enum:
[90m33 |[39m       - ready
[90m34 |[39m       - not_ready
[90m35 |[39m [1m[33m  price:  [41m[Actual] 10[49m[39m[22m
[90m36 |[39m     type: string
[90m37 |[39m required:
[90m38 |[39m   - id
[90m$workspace$/openapi.yml[39m

  [31m[200 response body] 'status' missing enum value 'hold' (/properties/books/items/properties/status/enum)[39m
  [41m  Diff  [49m 'status' does not have enum value hold
operation: [1mget /books[22m  
[90m29 |[39m   type: number
[90m30 |[39m status:
[90m31 |[39m   type: string
[90m32 |[39m [1m[33m  enum:  [41mmissing enum value 'hold'[49m[39m[22m
[90m33 |[39m     - ready
[90m34 |[39m     - not_ready
[90m35 |[39m price:
[90m$workspace$/openapi.yml[39m


100.0% coverage of your documented operations. 5 requests did not match a documented path (6 total requests).
9 diffs detected in documented operations

[33mNew endpoints are only added in interactive mode.[39m
[34mRun with \`--update interactive\` to add new endpoints[39m
[33mHint: optic capture openapi.yml --update interactive[39m
"
`;

exports[`capture with requests verify behavior verifies the specification with coverage 1`] = `
"Generating traffic to send to server
GET /books
  [31m× [39m200 response
  [31m[200 response body] 'name' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'created_at' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'updated_at' is not documented (/properties/books/items/properties)[39m
  [31m[200 response body] 'author_id' does not match type number. Received 6nTxAFM5ck4Hob77hGQoL (/properties/books/items/properties/author_id)[39m
  [31m[200 response body] 'price' does not match type string. Received 10 (/properties/books/items/properties/price)[39m
  [31m[200 response body] 'status' missing enum value 'hold' (/properties/books/items/properties/status/enum)[39m

100.0% coverage of your documented operations. 5 requests did not match a documented path (6 total requests).
6 diffs detected in documented operations

[33mNew endpoints are only added in interactive mode.[39m
[34mRun with \`--update interactive\` to add new endpoints[39m
[33mHint: optic capture openapi.yml --update interactive[39m
"
`;
